tests/ui/macros/issue-68060.stderr
error: attribute should be applied to a function definition
  --> $DIR/issue-68060.rs:4:13
   |
LL |             #[target_feature(enable = "")]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |             |_| (),
   |             ------ not a function definition

error: the feature named `` is not valid for this target
  --> $DIR/issue-68060.rs:4:30
   |
LL |             #[target_feature(enable = "")]
   |                              ^^^^^^^^^^^ `` is not valid for this target

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/issue-68060.rs:8:13
   |
LL |             #[track_caller]
   |             ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
